// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistrictList should match the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DistrictList
    comparedCards={Array []}
    filteredDistricts={
        Array [
            Object {
              "locaton": "GERMANY",
              "stats": Object {
                "2004": 0.29,
                "2005": 0.238,
                "2006": 0.369,
              },
            },
            Object {
              "locaton": "FLORIDA",
              "stats": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
              },
            },
          ]
    }
    foundAverages={Object {}}
    removeCompareCard={[Function]}
    retrieveCompare={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <div
                className="district-list"
        >
                
        </div>
        <div
                className="district-list"
        >
                <DistrictCard
                        comparedCards={Array []}
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                Object {
                                        "2004": 0.29,
                                        "2005": 0.238,
                                        "2006": 0.369,
                                      }
                        }
                />
                <DistrictCard
                        comparedCards={Array []}
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                Object {
                                        "2004": 0.24,
                                        "2005": 0.278,
                                        "2006": 0.337,
                                      }
                        }
                />
        </div>
</div>,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="district-list"
>
            
</div>,
          <div
            className="district-list"
>
            <DistrictCard
                        comparedCards={Array []}
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                    Object {
                                                "2004": 0.29,
                                                "2005": 0.238,
                                                "2006": 0.369,
                                              }
                        }
            />
            <DistrictCard
                        comparedCards={Array []}
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                    Object {
                                                "2004": 0.24,
                                                "2005": 0.278,
                                                "2006": 0.337,
                                              }
                        }
            />
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
            "className": "district-list",
          },
          "ref": null,
          "rendered": Array [],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <DistrictCard
                comparedCards={Array []}
                location={undefined}
                removeCompareCard={[Function]}
                retrieveCompare={[Function]}
                stats={
                                Object {
                                                "2004": 0.29,
                                                "2005": 0.238,
                                                "2006": 0.369,
                                              }
                }
/>,
              <DistrictCard
                comparedCards={Array []}
                location={undefined}
                removeCompareCard={[Function]}
                retrieveCompare={[Function]}
                stats={
                                Object {
                                                "2004": 0.24,
                                                "2005": 0.278,
                                                "2006": 0.337,
                                              }
                }
/>,
            ],
            "className": "district-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "comparedCards": Array [],
                "location": undefined,
                "removeCompareCard": [Function],
                "retrieveCompare": [Function],
                "stats": Object {
                  "2004": 0.29,
                  "2005": 0.238,
                  "2006": 0.369,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "comparedCards": Array [],
                "location": undefined,
                "removeCompareCard": [Function],
                "retrieveCompare": [Function],
                "stats": Object {
                  "2004": 0.24,
                  "2005": 0.278,
                  "2006": 0.337,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <div
                    className="district-list"
          >
                    
          </div>
          <div
                    className="district-list"
          >
                    <DistrictCard
                              comparedCards={Array []}
                              location={undefined}
                              removeCompareCard={[Function]}
                              retrieveCompare={[Function]}
                              stats={
                                        Object {
                                                  "2004": 0.29,
                                                  "2005": 0.238,
                                                  "2006": 0.369,
                                                }
                              }
                    />
                    <DistrictCard
                              comparedCards={Array []}
                              location={undefined}
                              removeCompareCard={[Function]}
                              retrieveCompare={[Function]}
                              stats={
                                        Object {
                                                  "2004": 0.24,
                                                  "2005": 0.278,
                                                  "2006": 0.337,
                                                }
                              }
                    />
          </div>
</div>,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="district-list"
>
              
</div>,
            <div
              className="district-list"
>
              <DistrictCard
                            comparedCards={Array []}
                            location={undefined}
                            removeCompareCard={[Function]}
                            retrieveCompare={[Function]}
                            stats={
                                          Object {
                                                        "2004": 0.29,
                                                        "2005": 0.238,
                                                        "2006": 0.369,
                                                      }
                            }
              />
              <DistrictCard
                            comparedCards={Array []}
                            location={undefined}
                            removeCompareCard={[Function]}
                            retrieveCompare={[Function]}
                            stats={
                                          Object {
                                                        "2004": 0.24,
                                                        "2005": 0.278,
                                                        "2006": 0.337,
                                                      }
                            }
              />
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [],
              "className": "district-list",
            },
            "ref": null,
            "rendered": Array [],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <DistrictCard
                  comparedCards={Array []}
                  location={undefined}
                  removeCompareCard={[Function]}
                  retrieveCompare={[Function]}
                  stats={
                                    Object {
                                                      "2004": 0.29,
                                                      "2005": 0.238,
                                                      "2006": 0.369,
                                                    }
                  }
/>,
                <DistrictCard
                  comparedCards={Array []}
                  location={undefined}
                  removeCompareCard={[Function]}
                  retrieveCompare={[Function]}
                  stats={
                                    Object {
                                                      "2004": 0.24,
                                                      "2005": 0.278,
                                                      "2006": 0.337,
                                                    }
                  }
/>,
              ],
              "className": "district-list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "comparedCards": Array [],
                  "location": undefined,
                  "removeCompareCard": [Function],
                  "retrieveCompare": [Function],
                  "stats": Object {
                    "2004": 0.29,
                    "2005": 0.238,
                    "2006": 0.369,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "comparedCards": Array [],
                  "location": undefined,
                  "removeCompareCard": [Function],
                  "retrieveCompare": [Function],
                  "stats": Object {
                    "2004": 0.24,
                    "2005": 0.278,
                    "2006": 0.337,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DistrictList should render the comparedCards when there are two in the compared array 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DistrictList
    comparedCards={
        Array [
            Object {
              "locaton": "GERMANY",
              "stats": Object {
                "2004": 0.29,
                "2005": 0.238,
                "2006": 0.369,
              },
            },
            Object {
              "locaton": "FLORIDA",
              "stats": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
              },
            },
          ]
    }
    filteredDistricts={
        Array [
            Object {
              "locaton": "GERMANY",
              "stats": Object {
                "2004": 0.29,
                "2005": 0.238,
                "2006": 0.369,
              },
            },
            Object {
              "locaton": "FLORIDA",
              "stats": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
              },
            },
          ]
    }
    foundAverages={Object {}}
    removeCompareCard={[Function]}
    retrieveCompare={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <div
                className="district-list"
        >
                <DistrictCard
                        comparedCards={
                                Array [
                                        Object {
                                          "locaton": "GERMANY",
                                          "stats": Object {
                                            "2004": 0.29,
                                            "2005": 0.238,
                                            "2006": 0.369,
                                          },
                                        },
                                        Object {
                                          "locaton": "FLORIDA",
                                          "stats": Object {
                                            "2004": 0.24,
                                            "2005": 0.278,
                                            "2006": 0.337,
                                          },
                                        },
                                      ]
                        }
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                Object {
                                        "2004": 0.29,
                                        "2005": 0.238,
                                        "2006": 0.369,
                                      }
                        }
                />
                <CompareCard
                        foundAverages={Object {}}
                        locationOne={
                                Object {
                                        "locaton": "GERMANY",
                                        "stats": Object {
                                          "2004": 0.29,
                                          "2005": 0.238,
                                          "2006": 0.369,
                                        },
                                      }
                        }
                        locationTwo={
                                Object {
                                        "locaton": "FLORIDA",
                                        "stats": Object {
                                          "2004": 0.24,
                                          "2005": 0.278,
                                          "2006": 0.337,
                                        },
                                      }
                        }
                />
                <DistrictCard
                        comparedCards={
                                Array [
                                        Object {
                                          "locaton": "GERMANY",
                                          "stats": Object {
                                            "2004": 0.29,
                                            "2005": 0.238,
                                            "2006": 0.369,
                                          },
                                        },
                                        Object {
                                          "locaton": "FLORIDA",
                                          "stats": Object {
                                            "2004": 0.24,
                                            "2005": 0.278,
                                            "2006": 0.337,
                                          },
                                        },
                                      ]
                        }
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                Object {
                                        "2004": 0.24,
                                        "2005": 0.278,
                                        "2006": 0.337,
                                      }
                        }
                />
        </div>
        <div
                className="district-list"
        >
                <DistrictCard
                        comparedCards={
                                Array [
                                        Object {
                                          "locaton": "GERMANY",
                                          "stats": Object {
                                            "2004": 0.29,
                                            "2005": 0.238,
                                            "2006": 0.369,
                                          },
                                        },
                                        Object {
                                          "locaton": "FLORIDA",
                                          "stats": Object {
                                            "2004": 0.24,
                                            "2005": 0.278,
                                            "2006": 0.337,
                                          },
                                        },
                                      ]
                        }
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                Object {
                                        "2004": 0.29,
                                        "2005": 0.238,
                                        "2006": 0.369,
                                      }
                        }
                />
                <DistrictCard
                        comparedCards={
                                Array [
                                        Object {
                                          "locaton": "GERMANY",
                                          "stats": Object {
                                            "2004": 0.29,
                                            "2005": 0.238,
                                            "2006": 0.369,
                                          },
                                        },
                                        Object {
                                          "locaton": "FLORIDA",
                                          "stats": Object {
                                            "2004": 0.24,
                                            "2005": 0.278,
                                            "2006": 0.337,
                                          },
                                        },
                                      ]
                        }
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                Object {
                                        "2004": 0.24,
                                        "2005": 0.278,
                                        "2006": 0.337,
                                      }
                        }
                />
        </div>
</div>,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="district-list"
>
            <DistrictCard
                        comparedCards={
                                    Array [
                                                Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                },
                                                Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                },
                                              ]
                        }
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                    Object {
                                                "2004": 0.29,
                                                "2005": 0.238,
                                                "2006": 0.369,
                                              }
                        }
            />
            <CompareCard
                        foundAverages={Object {}}
                        locationOne={
                                    Object {
                                                "locaton": "GERMANY",
                                                "stats": Object {
                                                  "2004": 0.29,
                                                  "2005": 0.238,
                                                  "2006": 0.369,
                                                },
                                              }
                        }
                        locationTwo={
                                    Object {
                                                "locaton": "FLORIDA",
                                                "stats": Object {
                                                  "2004": 0.24,
                                                  "2005": 0.278,
                                                  "2006": 0.337,
                                                },
                                              }
                        }
            />
            <DistrictCard
                        comparedCards={
                                    Array [
                                                Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                },
                                                Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                },
                                              ]
                        }
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                    Object {
                                                "2004": 0.24,
                                                "2005": 0.278,
                                                "2006": 0.337,
                                              }
                        }
            />
</div>,
          <div
            className="district-list"
>
            <DistrictCard
                        comparedCards={
                                    Array [
                                                Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                },
                                                Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                },
                                              ]
                        }
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                    Object {
                                                "2004": 0.29,
                                                "2005": 0.238,
                                                "2006": 0.369,
                                              }
                        }
            />
            <DistrictCard
                        comparedCards={
                                    Array [
                                                Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                },
                                                Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                },
                                              ]
                        }
                        location={undefined}
                        removeCompareCard={[Function]}
                        retrieveCompare={[Function]}
                        stats={
                                    Object {
                                                "2004": 0.24,
                                                "2005": 0.278,
                                                "2006": 0.337,
                                              }
                        }
            />
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <DistrictCard
                comparedCards={
                                Array [
                                                Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                },
                                                Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                },
                                              ]
                }
                location={undefined}
                removeCompareCard={[Function]}
                retrieveCompare={[Function]}
                stats={
                                Object {
                                                "2004": 0.29,
                                                "2005": 0.238,
                                                "2006": 0.369,
                                              }
                }
/>,
              <CompareCard
                foundAverages={Object {}}
                locationOne={
                                Object {
                                                "locaton": "GERMANY",
                                                "stats": Object {
                                                  "2004": 0.29,
                                                  "2005": 0.238,
                                                  "2006": 0.369,
                                                },
                                              }
                }
                locationTwo={
                                Object {
                                                "locaton": "FLORIDA",
                                                "stats": Object {
                                                  "2004": 0.24,
                                                  "2005": 0.278,
                                                  "2006": 0.337,
                                                },
                                              }
                }
/>,
              <DistrictCard
                comparedCards={
                                Array [
                                                Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                },
                                                Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                },
                                              ]
                }
                location={undefined}
                removeCompareCard={[Function]}
                retrieveCompare={[Function]}
                stats={
                                Object {
                                                "2004": 0.24,
                                                "2005": 0.278,
                                                "2006": 0.337,
                                              }
                }
/>,
            ],
            "className": "district-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "comparedCards": Array [
                  Object {
                    "locaton": "GERMANY",
                    "stats": Object {
                      "2004": 0.29,
                      "2005": 0.238,
                      "2006": 0.369,
                    },
                  },
                  Object {
                    "locaton": "FLORIDA",
                    "stats": Object {
                      "2004": 0.24,
                      "2005": 0.278,
                      "2006": 0.337,
                    },
                  },
                ],
                "location": undefined,
                "removeCompareCard": [Function],
                "retrieveCompare": [Function],
                "stats": Object {
                  "2004": 0.29,
                  "2005": 0.238,
                  "2006": 0.369,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "foundAverages": Object {},
                "locationOne": Object {
                  "locaton": "GERMANY",
                  "stats": Object {
                    "2004": 0.29,
                    "2005": 0.238,
                    "2006": 0.369,
                  },
                },
                "locationTwo": Object {
                  "locaton": "FLORIDA",
                  "stats": Object {
                    "2004": 0.24,
                    "2005": 0.278,
                    "2006": 0.337,
                  },
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "comparedCards": Array [
                  Object {
                    "locaton": "GERMANY",
                    "stats": Object {
                      "2004": 0.29,
                      "2005": 0.238,
                      "2006": 0.369,
                    },
                  },
                  Object {
                    "locaton": "FLORIDA",
                    "stats": Object {
                      "2004": 0.24,
                      "2005": 0.278,
                      "2006": 0.337,
                    },
                  },
                ],
                "location": undefined,
                "removeCompareCard": [Function],
                "retrieveCompare": [Function],
                "stats": Object {
                  "2004": 0.24,
                  "2005": 0.278,
                  "2006": 0.337,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <DistrictCard
                comparedCards={
                                Array [
                                                Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                },
                                                Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                },
                                              ]
                }
                location={undefined}
                removeCompareCard={[Function]}
                retrieveCompare={[Function]}
                stats={
                                Object {
                                                "2004": 0.29,
                                                "2005": 0.238,
                                                "2006": 0.369,
                                              }
                }
/>,
              <DistrictCard
                comparedCards={
                                Array [
                                                Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                },
                                                Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                },
                                              ]
                }
                location={undefined}
                removeCompareCard={[Function]}
                retrieveCompare={[Function]}
                stats={
                                Object {
                                                "2004": 0.24,
                                                "2005": 0.278,
                                                "2006": 0.337,
                                              }
                }
/>,
            ],
            "className": "district-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "comparedCards": Array [
                  Object {
                    "locaton": "GERMANY",
                    "stats": Object {
                      "2004": 0.29,
                      "2005": 0.238,
                      "2006": 0.369,
                    },
                  },
                  Object {
                    "locaton": "FLORIDA",
                    "stats": Object {
                      "2004": 0.24,
                      "2005": 0.278,
                      "2006": 0.337,
                    },
                  },
                ],
                "location": undefined,
                "removeCompareCard": [Function],
                "retrieveCompare": [Function],
                "stats": Object {
                  "2004": 0.29,
                  "2005": 0.238,
                  "2006": 0.369,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "comparedCards": Array [
                  Object {
                    "locaton": "GERMANY",
                    "stats": Object {
                      "2004": 0.29,
                      "2005": 0.238,
                      "2006": 0.369,
                    },
                  },
                  Object {
                    "locaton": "FLORIDA",
                    "stats": Object {
                      "2004": 0.24,
                      "2005": 0.278,
                      "2006": 0.337,
                    },
                  },
                ],
                "location": undefined,
                "removeCompareCard": [Function],
                "retrieveCompare": [Function],
                "stats": Object {
                  "2004": 0.24,
                  "2005": 0.278,
                  "2006": 0.337,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <div
                    className="district-list"
          >
                    <DistrictCard
                              comparedCards={
                                        Array [
                                                  Object {
                                                    "locaton": "GERMANY",
                                                    "stats": Object {
                                                      "2004": 0.29,
                                                      "2005": 0.238,
                                                      "2006": 0.369,
                                                    },
                                                  },
                                                  Object {
                                                    "locaton": "FLORIDA",
                                                    "stats": Object {
                                                      "2004": 0.24,
                                                      "2005": 0.278,
                                                      "2006": 0.337,
                                                    },
                                                  },
                                                ]
                              }
                              location={undefined}
                              removeCompareCard={[Function]}
                              retrieveCompare={[Function]}
                              stats={
                                        Object {
                                                  "2004": 0.29,
                                                  "2005": 0.238,
                                                  "2006": 0.369,
                                                }
                              }
                    />
                    <CompareCard
                              foundAverages={Object {}}
                              locationOne={
                                        Object {
                                                  "locaton": "GERMANY",
                                                  "stats": Object {
                                                    "2004": 0.29,
                                                    "2005": 0.238,
                                                    "2006": 0.369,
                                                  },
                                                }
                              }
                              locationTwo={
                                        Object {
                                                  "locaton": "FLORIDA",
                                                  "stats": Object {
                                                    "2004": 0.24,
                                                    "2005": 0.278,
                                                    "2006": 0.337,
                                                  },
                                                }
                              }
                    />
                    <DistrictCard
                              comparedCards={
                                        Array [
                                                  Object {
                                                    "locaton": "GERMANY",
                                                    "stats": Object {
                                                      "2004": 0.29,
                                                      "2005": 0.238,
                                                      "2006": 0.369,
                                                    },
                                                  },
                                                  Object {
                                                    "locaton": "FLORIDA",
                                                    "stats": Object {
                                                      "2004": 0.24,
                                                      "2005": 0.278,
                                                      "2006": 0.337,
                                                    },
                                                  },
                                                ]
                              }
                              location={undefined}
                              removeCompareCard={[Function]}
                              retrieveCompare={[Function]}
                              stats={
                                        Object {
                                                  "2004": 0.24,
                                                  "2005": 0.278,
                                                  "2006": 0.337,
                                                }
                              }
                    />
          </div>
          <div
                    className="district-list"
          >
                    <DistrictCard
                              comparedCards={
                                        Array [
                                                  Object {
                                                    "locaton": "GERMANY",
                                                    "stats": Object {
                                                      "2004": 0.29,
                                                      "2005": 0.238,
                                                      "2006": 0.369,
                                                    },
                                                  },
                                                  Object {
                                                    "locaton": "FLORIDA",
                                                    "stats": Object {
                                                      "2004": 0.24,
                                                      "2005": 0.278,
                                                      "2006": 0.337,
                                                    },
                                                  },
                                                ]
                              }
                              location={undefined}
                              removeCompareCard={[Function]}
                              retrieveCompare={[Function]}
                              stats={
                                        Object {
                                                  "2004": 0.29,
                                                  "2005": 0.238,
                                                  "2006": 0.369,
                                                }
                              }
                    />
                    <DistrictCard
                              comparedCards={
                                        Array [
                                                  Object {
                                                    "locaton": "GERMANY",
                                                    "stats": Object {
                                                      "2004": 0.29,
                                                      "2005": 0.238,
                                                      "2006": 0.369,
                                                    },
                                                  },
                                                  Object {
                                                    "locaton": "FLORIDA",
                                                    "stats": Object {
                                                      "2004": 0.24,
                                                      "2005": 0.278,
                                                      "2006": 0.337,
                                                    },
                                                  },
                                                ]
                              }
                              location={undefined}
                              removeCompareCard={[Function]}
                              retrieveCompare={[Function]}
                              stats={
                                        Object {
                                                  "2004": 0.24,
                                                  "2005": 0.278,
                                                  "2006": 0.337,
                                                }
                              }
                    />
          </div>
</div>,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="district-list"
>
              <DistrictCard
                            comparedCards={
                                          Array [
                                                        Object {
                                                          "locaton": "GERMANY",
                                                          "stats": Object {
                                                            "2004": 0.29,
                                                            "2005": 0.238,
                                                            "2006": 0.369,
                                                          },
                                                        },
                                                        Object {
                                                          "locaton": "FLORIDA",
                                                          "stats": Object {
                                                            "2004": 0.24,
                                                            "2005": 0.278,
                                                            "2006": 0.337,
                                                          },
                                                        },
                                                      ]
                            }
                            location={undefined}
                            removeCompareCard={[Function]}
                            retrieveCompare={[Function]}
                            stats={
                                          Object {
                                                        "2004": 0.29,
                                                        "2005": 0.238,
                                                        "2006": 0.369,
                                                      }
                            }
              />
              <CompareCard
                            foundAverages={Object {}}
                            locationOne={
                                          Object {
                                                        "locaton": "GERMANY",
                                                        "stats": Object {
                                                          "2004": 0.29,
                                                          "2005": 0.238,
                                                          "2006": 0.369,
                                                        },
                                                      }
                            }
                            locationTwo={
                                          Object {
                                                        "locaton": "FLORIDA",
                                                        "stats": Object {
                                                          "2004": 0.24,
                                                          "2005": 0.278,
                                                          "2006": 0.337,
                                                        },
                                                      }
                            }
              />
              <DistrictCard
                            comparedCards={
                                          Array [
                                                        Object {
                                                          "locaton": "GERMANY",
                                                          "stats": Object {
                                                            "2004": 0.29,
                                                            "2005": 0.238,
                                                            "2006": 0.369,
                                                          },
                                                        },
                                                        Object {
                                                          "locaton": "FLORIDA",
                                                          "stats": Object {
                                                            "2004": 0.24,
                                                            "2005": 0.278,
                                                            "2006": 0.337,
                                                          },
                                                        },
                                                      ]
                            }
                            location={undefined}
                            removeCompareCard={[Function]}
                            retrieveCompare={[Function]}
                            stats={
                                          Object {
                                                        "2004": 0.24,
                                                        "2005": 0.278,
                                                        "2006": 0.337,
                                                      }
                            }
              />
</div>,
            <div
              className="district-list"
>
              <DistrictCard
                            comparedCards={
                                          Array [
                                                        Object {
                                                          "locaton": "GERMANY",
                                                          "stats": Object {
                                                            "2004": 0.29,
                                                            "2005": 0.238,
                                                            "2006": 0.369,
                                                          },
                                                        },
                                                        Object {
                                                          "locaton": "FLORIDA",
                                                          "stats": Object {
                                                            "2004": 0.24,
                                                            "2005": 0.278,
                                                            "2006": 0.337,
                                                          },
                                                        },
                                                      ]
                            }
                            location={undefined}
                            removeCompareCard={[Function]}
                            retrieveCompare={[Function]}
                            stats={
                                          Object {
                                                        "2004": 0.29,
                                                        "2005": 0.238,
                                                        "2006": 0.369,
                                                      }
                            }
              />
              <DistrictCard
                            comparedCards={
                                          Array [
                                                        Object {
                                                          "locaton": "GERMANY",
                                                          "stats": Object {
                                                            "2004": 0.29,
                                                            "2005": 0.238,
                                                            "2006": 0.369,
                                                          },
                                                        },
                                                        Object {
                                                          "locaton": "FLORIDA",
                                                          "stats": Object {
                                                            "2004": 0.24,
                                                            "2005": 0.278,
                                                            "2006": 0.337,
                                                          },
                                                        },
                                                      ]
                            }
                            location={undefined}
                            removeCompareCard={[Function]}
                            retrieveCompare={[Function]}
                            stats={
                                          Object {
                                                        "2004": 0.24,
                                                        "2005": 0.278,
                                                        "2006": 0.337,
                                                      }
                            }
              />
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <DistrictCard
                  comparedCards={
                                    Array [
                                                      Object {
                                                        "locaton": "GERMANY",
                                                        "stats": Object {
                                                          "2004": 0.29,
                                                          "2005": 0.238,
                                                          "2006": 0.369,
                                                        },
                                                      },
                                                      Object {
                                                        "locaton": "FLORIDA",
                                                        "stats": Object {
                                                          "2004": 0.24,
                                                          "2005": 0.278,
                                                          "2006": 0.337,
                                                        },
                                                      },
                                                    ]
                  }
                  location={undefined}
                  removeCompareCard={[Function]}
                  retrieveCompare={[Function]}
                  stats={
                                    Object {
                                                      "2004": 0.29,
                                                      "2005": 0.238,
                                                      "2006": 0.369,
                                                    }
                  }
/>,
                <CompareCard
                  foundAverages={Object {}}
                  locationOne={
                                    Object {
                                                      "locaton": "GERMANY",
                                                      "stats": Object {
                                                        "2004": 0.29,
                                                        "2005": 0.238,
                                                        "2006": 0.369,
                                                      },
                                                    }
                  }
                  locationTwo={
                                    Object {
                                                      "locaton": "FLORIDA",
                                                      "stats": Object {
                                                        "2004": 0.24,
                                                        "2005": 0.278,
                                                        "2006": 0.337,
                                                      },
                                                    }
                  }
/>,
                <DistrictCard
                  comparedCards={
                                    Array [
                                                      Object {
                                                        "locaton": "GERMANY",
                                                        "stats": Object {
                                                          "2004": 0.29,
                                                          "2005": 0.238,
                                                          "2006": 0.369,
                                                        },
                                                      },
                                                      Object {
                                                        "locaton": "FLORIDA",
                                                        "stats": Object {
                                                          "2004": 0.24,
                                                          "2005": 0.278,
                                                          "2006": 0.337,
                                                        },
                                                      },
                                                    ]
                  }
                  location={undefined}
                  removeCompareCard={[Function]}
                  retrieveCompare={[Function]}
                  stats={
                                    Object {
                                                      "2004": 0.24,
                                                      "2005": 0.278,
                                                      "2006": 0.337,
                                                    }
                  }
/>,
              ],
              "className": "district-list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "comparedCards": Array [
                    Object {
                      "locaton": "GERMANY",
                      "stats": Object {
                        "2004": 0.29,
                        "2005": 0.238,
                        "2006": 0.369,
                      },
                    },
                    Object {
                      "locaton": "FLORIDA",
                      "stats": Object {
                        "2004": 0.24,
                        "2005": 0.278,
                        "2006": 0.337,
                      },
                    },
                  ],
                  "location": undefined,
                  "removeCompareCard": [Function],
                  "retrieveCompare": [Function],
                  "stats": Object {
                    "2004": 0.29,
                    "2005": 0.238,
                    "2006": 0.369,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "foundAverages": Object {},
                  "locationOne": Object {
                    "locaton": "GERMANY",
                    "stats": Object {
                      "2004": 0.29,
                      "2005": 0.238,
                      "2006": 0.369,
                    },
                  },
                  "locationTwo": Object {
                    "locaton": "FLORIDA",
                    "stats": Object {
                      "2004": 0.24,
                      "2005": 0.278,
                      "2006": 0.337,
                    },
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "comparedCards": Array [
                    Object {
                      "locaton": "GERMANY",
                      "stats": Object {
                        "2004": 0.29,
                        "2005": 0.238,
                        "2006": 0.369,
                      },
                    },
                    Object {
                      "locaton": "FLORIDA",
                      "stats": Object {
                        "2004": 0.24,
                        "2005": 0.278,
                        "2006": 0.337,
                      },
                    },
                  ],
                  "location": undefined,
                  "removeCompareCard": [Function],
                  "retrieveCompare": [Function],
                  "stats": Object {
                    "2004": 0.24,
                    "2005": 0.278,
                    "2006": 0.337,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <DistrictCard
                  comparedCards={
                                    Array [
                                                      Object {
                                                        "locaton": "GERMANY",
                                                        "stats": Object {
                                                          "2004": 0.29,
                                                          "2005": 0.238,
                                                          "2006": 0.369,
                                                        },
                                                      },
                                                      Object {
                                                        "locaton": "FLORIDA",
                                                        "stats": Object {
                                                          "2004": 0.24,
                                                          "2005": 0.278,
                                                          "2006": 0.337,
                                                        },
                                                      },
                                                    ]
                  }
                  location={undefined}
                  removeCompareCard={[Function]}
                  retrieveCompare={[Function]}
                  stats={
                                    Object {
                                                      "2004": 0.29,
                                                      "2005": 0.238,
                                                      "2006": 0.369,
                                                    }
                  }
/>,
                <DistrictCard
                  comparedCards={
                                    Array [
                                                      Object {
                                                        "locaton": "GERMANY",
                                                        "stats": Object {
                                                          "2004": 0.29,
                                                          "2005": 0.238,
                                                          "2006": 0.369,
                                                        },
                                                      },
                                                      Object {
                                                        "locaton": "FLORIDA",
                                                        "stats": Object {
                                                          "2004": 0.24,
                                                          "2005": 0.278,
                                                          "2006": 0.337,
                                                        },
                                                      },
                                                    ]
                  }
                  location={undefined}
                  removeCompareCard={[Function]}
                  retrieveCompare={[Function]}
                  stats={
                                    Object {
                                                      "2004": 0.24,
                                                      "2005": 0.278,
                                                      "2006": 0.337,
                                                    }
                  }
/>,
              ],
              "className": "district-list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "comparedCards": Array [
                    Object {
                      "locaton": "GERMANY",
                      "stats": Object {
                        "2004": 0.29,
                        "2005": 0.238,
                        "2006": 0.369,
                      },
                    },
                    Object {
                      "locaton": "FLORIDA",
                      "stats": Object {
                        "2004": 0.24,
                        "2005": 0.278,
                        "2006": 0.337,
                      },
                    },
                  ],
                  "location": undefined,
                  "removeCompareCard": [Function],
                  "retrieveCompare": [Function],
                  "stats": Object {
                    "2004": 0.29,
                    "2005": 0.238,
                    "2006": 0.369,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "comparedCards": Array [
                    Object {
                      "locaton": "GERMANY",
                      "stats": Object {
                        "2004": 0.29,
                        "2005": 0.238,
                        "2006": 0.369,
                      },
                    },
                    Object {
                      "locaton": "FLORIDA",
                      "stats": Object {
                        "2004": 0.24,
                        "2005": 0.278,
                        "2006": 0.337,
                      },
                    },
                  ],
                  "location": undefined,
                  "removeCompareCard": [Function],
                  "retrieveCompare": [Function],
                  "stats": Object {
                    "2004": 0.24,
                    "2005": 0.278,
                    "2006": 0.337,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
